--- a/src/login.css
+++ b/src/login.css
@@ -8,26 +8,14 @@ body{
 }
 
 .di{
+    margin-top: 50px;
     background-color:#9775a6 ;
     color: #2d162c;
-}
-.img_gato{
-    background-color: white;
-}
-
-.parent{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    border-radius: 15px;
-    width: 800px;
+    margin-left: 400px;
+    background-color: #9775a6; 
     height: 450px;
-    overflow: hidden;
-    margin-left: 250px;
-    margin-top: 90px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #683a68;
+    width: 400px;
+    border-radius: 10px;
 }
 
 label{
