--- a/src/solicitudes.css
+++ b/src/solicitudes.css
@@ -1,6 +1,15 @@
 body{
     background-color: #2d162c;
 }
+nav{
+    background-color:  #9775a6;
+    height: 90px;
+}
+
+footer{
+    background-color:  #9775a6;
+    height: 90px; 
+}
 
 .titu{
     text-align: center;
@@ -43,4 +52,8 @@ button{
     color: #2d162c;
     border-radius: 5px;
     border: none;
+}
+a{
+    text-decoration: none;
+    color: #2d162c;
 }
