--- a/src/adm.css
+++ b/src/adm.css
@@ -1,22 +1,88 @@
 body{
     background-color: #2d162c;
-    color:  #9775a6; 
+    font-family: 'Press Start 2P', cursive;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    box-sizing: border-box;
+    color: #ffffff;
 }
-nav{
+
+footer{
     display: flex;
     background-color:  #9775a6;
-    height: 200px;
-    width: 100%;
+    height: 200px; 
 }
+
+h1{
+text-align: center;
+}
+.autor{
+    color: #2d162c;
+    font-family: 'Press Start 2P', cursive;
+    margin-top: 70px;
+    margin-left: 300px;
+}
+
+.gatoo{
+    width: 160px;
+    height: 170px;
+    margin-left: 70px;
+    margin-top: 15px;
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    background-color:  #9775a6;
+    height: 120px;
+}
+
+
+footer{
+    display: flex;
+    background-color:  #9775a6;
+    height: 200px; 
+}
+
+.gato{
+    height: 70px;
+    width: 100px;
+    margin-bottom: -10px;
+}
+
+.img_gato{
+    width: 17%;
+    height: 50px;
+}
+
+button{
+    height: 40px;
+    width: 150px;
+    margin-left: 20px;
+    background-color: #683a68;
+    color: #2d162c;
+    border-radius: 5px;
+    border: none;
+    font-family: 'Press Start 2P', cursive;
+    font-size: smaller;
+}
+
 a{  
     text-decoration: none;
+    color: #ffffff;
+    margin-left: 50px;
 }
 
 input{
     background-color: #9775a6;
     border-radius: 5px;
     color: #ffffff;
-    width: 80px;
+    height: 40px;
+    margin-left: 200px;
+    font-family: 'Press Start 2P', cursive;
 }
 ::placeholder{
     color: #ffffff;
