--- a/src/login.css
+++ b/src/login.css
@@ -17,7 +17,7 @@ body{
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     background-color: #ab97b3;
-    height: 450px;
+    height: 500px;
     width: 750px;
     border-radius: 10px;
     overflow: hidden;
@@ -66,4 +66,11 @@ button{
     border-radius: 5px;
     border: none;
     font-family: 'Press Start 2P', cursive
+}
+
+a{
+    color: #412752;
+    text-decoration: none;
+    margin-left: 137px;
+    font-size: x-small;
 }
