--- a/src/register.css
+++ b/src/register.css
@@ -13,20 +13,20 @@ body{
     margin-top: 40px;
     margin-left: 400px;
     background-color: #9775a6; 
-    height: 550px;
-    width: 400px;
+    height: 590px;
+    width: 450px;
     border-radius: 10px;
 }
 
 
 label{
-    margin-left: 80px;
+    margin-left: 100px;
 }
 
 input{
      
     background-color: #9775a6; 
-    margin-left: 80px;
+    margin-left: 100px;
     height: 30px;
     width: 230px;
     border-left: none;
@@ -42,7 +42,7 @@ input[type="text"]::placeholder {
 }
 
 button{
-    margin-left: 115px;
+    margin-left: 130px;
     height: 40px;
     width: 170px;
     background-color: #683a68;
@@ -57,5 +57,12 @@ button{
 img{
     width: 300px;
     height: 60px;
-    margin-left: 50px;
+    margin-left: 80px;
+}
+
+a{
+    color: #412752;
+    text-decoration: none;
+    margin-left: 137px;
+    font-size: x-small;
 }
