--- a/src/login.css
+++ b/src/login.css
@@ -17,7 +17,7 @@ body{
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     background-color: #ab97b3;
-    height: 500px;
+    height: 470px;
     width: 750px;
     border-radius: 10px;
     overflow: hidden;
@@ -73,4 +73,47 @@ a{
     text-decoration: none;
     margin-left: 137px;
     font-size: x-small;
+}
+
+dialog {
+    background-color: #ab97b3;
+    color: #412752;
+    text-align: center;
+    height: 350px;
+    width: 500px;
+}
+
+.tecleando{
+    width: 40%;
+}
+
+#boton_10{
+ margin-right: 25%;
+}
+#boton_9{
+    margin-right: 25%;
+}
+#boton_8{
+    margin-right: 25%;
+}
+#boton_7{
+    margin-right: 25%;
+}
+#boton_6{
+    margin-right: 25%;
+}
+#boton_5{
+    margin-right: 25%;
+}
+#boton_4{
+    margin-right: 25%;
+}
+#boton_3{
+    margin-right: 25%;
+}
+#boton_2{
+    margin-right: 25%;
+}
+#boton_1{
+    margin-right: 25%;
 }
