--- a/src/solicitudes.css
+++ b/src/solicitudes.css
@@ -101,3 +101,25 @@ p{
     margin-left: 70px;
     margin-top: 15px;
 }
+
+dialog {
+    background-color: #ab97b3;
+    color: #412752;
+    text-align: center;
+    height: 350px;
+    width: 500px;
+    font-family: 'Press Start 2P', cursive   
+}
+
+.tecleando{
+    width: 90%;
+}
+
+#boton_1{
+ margin-right: 25%;
+ margin-top: 200%;
+}
+#boton_2{
+    margin-right: 25%;
+
+}
