--- a/src/historial.css
+++ b/src/historial.css
@@ -88,11 +88,6 @@ a{
     text-decoration: none;
 }
 
-@media  (max-width:600px){
-    body{
-        background-color: #9775a6;
-    }
-}
 
 
 .gato{
@@ -114,4 +109,95 @@ button{
     border: none;
     font-family: 'Press Start 2P', cursive;
     font-size: smaller;
+}
+
+@media (max-width: 600px) {
+ 
+    
+}
+
+@media (max-width: 800px) {
+    body {
+        background-color: #2d162c;
+    }
+    nav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        background-color:  #9775a6;
+        height: 120px;
+    }
+    input{
+        background-color: #9775a6;
+        border-radius: 5px;
+        color: #ffffff;
+        height: 20px;
+        width: 100px;
+        margin-left: 1px;
+        font-family: 'Press Start 2P', cursive;
+    }
+    ::placeholder{
+        color: #ffffff;
+        font-size: 6px;
+    }
+    button{
+        height: 20px;
+        width: 50px;
+        background-color: #683a68;
+        color: #2d162c;
+        border-radius: 5px;
+        border: none;
+        font-family: 'Press Start 2P', cursive;
+        font-size: 1px;
+        margin-left: 5px;
+    }
+    a{
+        color: #ffffff;
+        font-size: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        padding: 2%;
+        text-decoration: none;
+    }
+    .gato{
+        height: 50px;
+        width: 50px;
+        margin-bottom: -10px;
+    }
+    
+    .img_gato{
+        width: 30%;
+        height: 35px;
+    }
+    footer{
+        display: flex;
+        background-color:  #9775a6;
+        height: 100px; 
+    }
+    
+    .autor{
+        color: #2d162c;
+        font-family: 'Press Start 2P', cursive;
+        margin-top: 70px;
+        margin-left: 300px;
+        font-size: 6px;
+    }
+    
+    .gatoo{
+        width: 60px;
+        height: 70px;
+        margin-left: 70px;
+        margin-top: 15px;
+    }
+div{
+    margin: 2%;
+    padding: 2%;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 5px;
+}
 }
